Change site Header

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>
-        Welcome to our store
+        Welcome to the Skypiea store
     </h1>
 
     <div class="columns">
